deploy/imageservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imageservice
  labels:
    app: cogito
    tier: backend
    component: imageservice
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: cogito
      tier: backend
      component: imageservice
  template:
    metadata:
      labels:
        app: cogito
        tier: backend
        component: imageservice
    spec:
      serviceAccountName: imageservice
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 60
      containers:
      - name: imageservice
        image: localhost:5000/cogito/imageservice
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 65534
          runAsGroup: 65534
          capabilities:
            drop:
            - ALL
        ports:
        - containerPort: 5050
          name: grpc
        - containerPort: 8081
          name: http
        resources:
          limits:
            memory: 256Mi
          requests:
            memory: 64Mi
            cpu: 50m
        livenessProbe:
          tcpSocket:
            port: 5050
          initialDelaySeconds: 10
          periodSeconds: 15
        readinessProbe:
          tcpSocket:
            port: 5050
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: imageservice
  labels:
    app: cogito
    tier: backend
    component: imageservice
spec:
  type: ClusterIP
  selector:
    app: cogito
    tier: backend
    component: imageservice
  ports:
  - name: grpc
    port: 5050
    targetPort: 5050
  - name: http
    port: 8081
    targetPort: 8081
