deploy/postservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: postservice
  labels:
    app: cogito
    tier: backend
    component: postservice
spec:
  selector:
    app: cogito
    tier: backend
    component: postservice
  ports:
  - port: 5050
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postservice
  labels:
    app: cogito
    tier: backend
    component: postservice
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: cogito
      tier: backend
      component: postservice
  template:
    metadata:
      labels:
        app: cogito
        tier: backend
        component: postservice
    spec:
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 60
      containers:
      - name: postservice
        image: localhost:5000/cogito/postservice
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 65534
          runAsGroup: 65534
          capabilities:
            drop:
            - ALL
        ports:
        - containerPort: 5050
        resources:
          limits:
            memory: 128Mi
          requests:
            memory: 64Mi
            cpu: 50m
        livenessProbe:
          tcpSocket:
            port: 5050
          initialDelaySeconds: 10
          periodSeconds: 15
        readinessProbe:
          tcpSocket:
            port: 5050
          initialDelaySeconds: 5
          periodSeconds: 10
