deploy/searchservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: searchservice
  labels:
    app: cogito
    tier: backend
    component: searchservice
spec:
  selector:
    app: cogito
    tier: backend
    component: searchservice
  ports:
  - port: 5050
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: searchservice
  labels:
    app: cogito
    tier: backend
    component: searchservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cogito
      tier: backend
      component: searchservice
  template:
    metadata:
      labels:
        app: cogito
        tier: backend
        component: searchservice
    spec:
      containers:
      - name: searchservice
        image: localhost:5000/cogito/searchservice
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5050
        resources:
          limits:
            memory: 128Mi
          requests:
            memory: 64Mi
            cpu: 100m
        livenessProbe:
          tcpSocket:
            port: 5050
          initialDelaySeconds: 10
          periodSeconds: 15
        readinessProbe:
          tcpSocket:
            port: 5050
          initialDelaySeconds: 5
          periodSeconds: 10
