deploy/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
spec:
  podSelector: {}
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-egress
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cogito-service-egress
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector: {}
    ports:
    - protocol: TCP
      port: 5050
    - protocol: TCP
      port: 8080
    - protocol: TCP
      port: 8081
    - protocol: TCP
      port: 5432
    - protocol: TCP
      port: 6379
    - protocol: TCP
      port: 7700
    - protocol: TCP
      port: 8333
    - protocol: TCP
      port: 9092
    - protocol: TCP
      port: 9644
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: authservice
spec:
  podSelector:
    matchLabels:
      app: cogito
      tier: backend
      component: authservice
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: cogito
          tier: backend
          component: apigateway
    ports:
    - protocol: TCP
      port: 5050
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: userservice
spec:
  podSelector:
    matchLabels:
      app: cogito
      tier: backend
      component: userservice
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: cogito
          tier: backend
          component: apigateway
    - podSelector:
        matchLabels:
          app: cogito
          tier: backend
          component: flowservice
    ports:
    - protocol: TCP
      port: 5050
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postservice
spec:
  podSelector:
    matchLabels:
      app: cogito
      tier: backend
      component: postservice
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: cogito
          tier: backend
          component: apigateway
    - podSelector:
        matchLabels:
          app: cogito
          tier: backend
          component: flowservice
    ports:
    - protocol: TCP
      port: 5050
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: imageservice
spec:
  podSelector:
    matchLabels:
      app: cogito
      tier: backend
      component: imageservice
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: cogito
          tier: backend
          component: apigateway
    ports:
    - protocol: TCP
      port: 5050
    - protocol: TCP
      port: 8081
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: flowservice
spec:
  podSelector:
    matchLabels:
      app: cogito
      tier: backend
      component: flowservice
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: cogito
          tier: backend
          component: apigateway
    ports:
    - protocol: TCP
      port: 5050
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend
spec:
  podSelector:
    matchLabels:
      app: cogito
      tier: frontend
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: apigateway
spec:
  podSelector:
    matchLabels:
      app: cogito
      tier: backend
      component: apigateway
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: cogito
          tier: frontend
    ports:
    - protocol: TCP
      port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: storage
spec:
  podSelector:
    matchLabels:
      app: cogito
      component: storage
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: cogito
          tier: backend
          component: apigateway
    - podSelector:
        matchLabels:
          app: cogito
          tier: backend
          component: imageservice
    - podSelector:
        matchLabels:
          app: cogito
          tier: broker
          component: connect
    ports:
    - protocol: TCP
      port: 8333
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: database
spec:
  podSelector:
    matchLabels:
      app: cogito
      tier: database
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: cogito
          tier: backend
          component: authservice
    - podSelector:
        matchLabels:
          app: cogito
          tier: backend
          component: userservice
    - podSelector:
        matchLabels:
          app: cogito
          tier: backend
          component: postservice
    - podSelector:
        matchLabels:
          app: cogito
          tier: backend
          component: imageservice
    - podSelector:
        matchLabels:
          app: cogito
          tier: backend
          component: flowservice
    - podSelector:
        matchLabels:
          app: cogito
          tier: broker
          component: connect
    - podSelector:
        matchLabels:
          app: cogito
          tier: broker
          component: broker-backfill
    - podSelector:
        matchLabels:
          app: cogito
          tier: backend
          component: apigateway
    ports:
    - protocol: TCP
      port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cache
spec:
  podSelector:
    matchLabels:
      app: cogito
      component: cache
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: cogito
          tier: backend
          component: apigateway
    - podSelector:
        matchLabels:
          app: cogito
          tier: backend
          component: flowservice
    ports:
    - protocol: TCP
      port: 6379
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: search
spec:
  podSelector:
    matchLabels:
      app: cogito
      tier: backend
      component: search
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: cogito
          tier: backend
          component: flowservice
    - podSelector:
        matchLabels:
          app: cogito
          tier: broker
          component: connect
    ports:
    - protocol: TCP
      port: 7700
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: broker
spec:
  podSelector:
    matchLabels:
      app: cogito
      tier: broker
    matchExpressions:
    - key: component
      operator: DoesNotExist
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: cogito
          tier: backend
          component: postservice
    - podSelector:
        matchLabels:
          app: cogito
          tier: backend
          component: userservice
    - podSelector:
        matchLabels:
          app: cogito
          tier: backend
          component: flowservice
    - podSelector:
        matchLabels:
          app: cogito
          tier: broker
          component: connect
    - podSelector:
        matchLabels:
          app: cogito
          tier: broker
          component: broker-backfill
    ports:
    - protocol: TCP
      port: 9092
